2015-04-01  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/_stdint.h: New file.
	* libc/include/stdint.h (int8_t): Move to <sys/_stdint.h>.
	(uint8_t): Likewise.
	(int16_t): Likewise.
	(uint16_t): Likewise.
	(int32_t): Likewise.
	(uint32_t): Likewise.
	(int64_t): Likewise.
	(uint64_t): Likewise.
	(intptr_t): Likewise.
	(uintptr_t): Likewise.
	* libc/include/sys/types.h: Include <sys/_stdint.h>.
	* libc/sys/rtems/machine/_types.h: Remove <stdint.h> include.
	* libc/sys/time.h>: Replace __uint32_t with uint32_t and
	__uint64_t with uint64_t.

2015-04-01  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* libc/include/sys/signal.h (stack_t): Make typedef generally
	available.

2015-04-01  Corinna Vinschen  <vinschen@redhat.com>

	* libc/stdlib/wctomb_r.c (__utf8_wctomb): Fix check for handling a
	lone high surrogate.

2015-03-31  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/lcltime_r.c (localtime_r): Call _tzset_unlocked inside
	TZ lock.
	* libc/time/mktime.c (mktime):  Ditto.
	* libc/time/strftime.c (strftime, wcsftime): Ditto.  Guard against
	calling _tzset_unlocked more than once (baring recursion).

2015-03-31  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/local.h (_tzset_unlocked_r): Add prototype.
	(_tzset_unlocked): Ditto.
	* libc/time/tzset.c (_tzset_unlocked): New function, call
	_tzset_unlocked_r.
	(tzset): Lock and call _tzset_unlocked_r.
	* libc/time/tzset_r (_tzset_unlocked_r): Remove locking and rename
	from _tzset_r.
	(_tzset_r): Lock and call _tzset_unlocked_r.

2015-03-30  Craig Howland  <howland@LGSInnovations.com>

	* libc/stdlib/setenv_r.c (_setenv_r): Remove tzset() call for TZ
	definition.
	* libc/time/lcltime_r.c (localtime_r): Add tzset() call
	* libc/time/mktime.c (mktime):  Ditto.
	* libc/time/strftime.c (strftime, wcsftime): Ditto.

2015-03-30  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/time/strftime.c (strftime) <%Z>: Initialize tznam to NULL.
	Use _tzname as fallback if TM_ZONE is NULL.
