@@ -1,3 +1,7 @@
+2015-04-01  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/include/stdint.h: Throughout add parens around MIN/MAX values.
+
 2015-04-01  Sebastian Huber  <sebastian.huber@embedded-brains.de>
 
 	* libc/include/sys/_stdint.h: New file.
